--- a/main.css
+++ b/main.css
@@ -32,9 +32,9 @@
         margin-right: 0px !important;
         margin-bottom: 12px !important;
     }
-    .box{
-        padding:0px !important;
-      }
+    .box {
+        padding: 0px !important;
+    }
     .vertical-line-blank-head {
         height: 0px !important;
         margin: 0px !important;
@@ -236,7 +236,7 @@ svg {
 
 /* Hover */
 
-@keyframes hover {
+@keyframes hover-float {
     50% {
         transform: translateY(-3px);
     }
@@ -256,7 +256,7 @@ svg {
 
 .ArrowHover:hover {
     transform: translateY(-16px);
-    animation-name: hover;
+    animation-name: hover-float;
     animation-duration: 1.5s;
     animation-delay: 0.3s;
     animation-timing-function: linear;
@@ -278,7 +278,7 @@ svg {
 }
 
 strong {
-    font-weight: 500;
+    font-weight: 300;
 }
 
 hr {
@@ -293,7 +293,7 @@ hr {
 
 br {
     display: block;
-    line-height: 40px;
+    line-height: 3vw;
 }
 
 .circle {
@@ -305,37 +305,6 @@ br {
     opacity: 0.8;
 }
 
-.horizontal-line {
-    border-top: 1px solid rgb(0, 0, 0);
-    height: 0px;
-    width: 130px;
-    margin-top: 0px;
-    margin-bottom: 18px;
-}
-
-.vertical-line {
-    border-left: 1px solid gray;
-    height: 160px;
-    margin: 120px/* top&bottom*/
-    120px;
-    /* left&right*/
-}
-
-.vertical-line-blank-head {
-    border-left: 0px solid gray;
-    height: 30px;
-    margin: 0px/* top&bottom*/
-    9px;
-    /* left&right*/
-}
-
-.vertical-line-blank {
-    border-left: 0px solid gray;
-    height: 160px;
-    margin: 120px/* top&bottom*/
-    120px;
-    /* left&right*/
-}
 
 /*progress bar*/
 
@@ -408,27 +377,33 @@ br {
     font-weight: 300;
     margin-right: 6%;
 }
+
 /* blur hover*/
-  .box{
-    padding:30px 20px;
-    margin:0;
-    background:white;
-    border-radius:3px;
-    transition:.2s all; 
-  }
-  .head-right:hover .box{
-    filter:blur(1px);
-    opacity:.3;
+
+.box {
+    padding: 30px 20px;
+    margin: 0;
+    background: white;
+    border-radius: 3px;
+    transition: .2s all;
+}
+
+.head-right:hover .box {
+    filter: blur(1px);
+    opacity: .3;
     transform: scale(.98);
-    box-shadow:none;
-  }
-  .head-right:hover .box:hover{
-    transform:scale(1);
-    filter:blur(0px);
-    opacity:1;
-    box-shadow:0 8px 20px 0px rgba(0,0,0,0.125);
-  }
+    box-shadow: none;
+}
+
+.head-right:hover .box:hover {
+    transform: scale(1);
+    filter: blur(0px);
+    opacity: 1;
+    box-shadow: 0 8px 20px 0px rgba(0, 0, 0, 0.125);
+}
+
 /* blur hover*/
+
 /*head tool bar scroll end*/
 
 /* body-intro */
@@ -437,11 +412,6 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-.body-margin {
-    margin: 0px/* top&bottom*/
-    6%/* left&right*/
-    ;
-}
 
 .body-landing {
     display: flex;
@@ -520,8 +490,299 @@ body {
     0px/* left&right*/
     ;
 }
-
 /* body-intro */
+/* body-project- new css test */
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.align-top {
+    display: flex;
+    align-items: flex-start;
+
+    justify-content: flex-start;
+
+}
+.align-bottom {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+.align-left {
+    display: flex;
+    justify-content: flex-start;
+}
+.align-right {
+    display: flex;
+    justify-content: flex-end;
+}
+.center-h {
+    display: flex;
+    justify-content: center;
+}
+.center-h-spacearound {
+    display: flex;
+    justify-content: space-around;
+}
+.center-v {
+    display: flex;
+    align-items: center;
+}
+
+.bg-square-interview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F5F5F5;
+    border-radius: 20px;
+    margin: 0;
+    border: 0px solid #4C665B;
+    height: 20vw;
+    width: 50vw;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 300;
+    box-shadow: 0 2px 4px 0 rgba(238, 238, 238, 0.795), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
+}
+.circle-gh{
+    height: 9vw;
+    width: 9vw;
+    border-radius: 50%;
+}
+
+.circle-gh:hover {
+    transform: scale(1.2);
+    opacity: .9;
+    cursor: pointer;
+    transition: transform 330ms ease-in-out;
+}
+.color-grey{
+    background-color: #F5F5F5;
+    box-shadow: 0 2px 4px 0 rgba(238, 238, 238, 0.795), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
+}
+.border-radius{
+    border-radius: 10%;
+}
+.border{
+    border: 1px solid #4C665B;
+}
+.height{
+    height: 15vw;
+}
+.width-xs{
+    width: 10vw;
+    margin: 2vw;
+}
+.width-s{
+    width: 12vw;
+    margin: 2vw;
+}
+
+.width-m{
+    width: 15vw;
+    margin: 2vw;
+}
+.width-l{
+    width: 35vw;
+    margin: 4vw;
+}
+.width{
+    width: 15vw;
+    margin: 2vw;
+}
+.h-line {
+    border-top: 1px solid #707070;
+    height: 0px;
+    width: 180px;
+    margin-top: 0px ;
+    margin-bottom: 1vw;
+}
+.ver-line {
+    border-left: 1px solid gray;
+    height: 160px;
+    margin: 0 6vw;
+}
+
+.speech-bubble {
+	position: relative;
+	background: #f5f5f5;
+	border-radius: .4em;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 0.563em solid transparent;
+	border-right-color: #f5f5f5;
+	border-left: 0;
+	margin-top: -0.562em;
+	margin-left: -0.562em;
+}
+
+.horizontal-line {
+    border-top: 1px solid rgb(0, 0, 0);
+    height: 0px;
+    width: 130px;
+    margin-top: 0px;
+    margin-bottom: 18px;
+}
+
+.horizontal-line-l {
+    border-top: 1px solid rgb(0, 0, 0);
+    height: 0px;
+    width: 100%;
+    margin-top: 0px;
+}
+
+.vertical-line {
+    border-left: 1px solid gray;
+    height: 160px;
+    margin: 120px/* top&bottom*/
+    120px;
+    /* left&right*/
+}
+
+.vertical-line-blank-head {
+    border-left: 0px solid gray;
+    height: 30px;
+    margin: 0px/* top&bottom*/
+    9px;
+    /* left&right*/
+}
+
+.vertical-line-blank {
+    border-left: 0px solid gray;
+    height: 160px;
+    margin: 120px/* top&bottom*/
+    120px;
+    /* left&right*/
+}
+/* body-project- new css test */
+
+
+
+
+.research-arrow {
+    margin: 5vw 2vw;
+    border: solid black;
+    border-width: 0 1px 1px 0;
+    display: inline-block;
+    height: 1vw;
+    width: 1vw;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+.body-h-project {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.body-h-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: right;
+    width: 30%;
+}
+.body-margin {
+    margin: 0px 6%;
+}
+.margin-tb{
+    margin: 0 10vw;
+}
+.margin-l{
+    margin: 20vw;
+}
+.margin-m{
+    margin: 4vw;
+}
+.margin-s{
+    margin: 2vw
+}
+.margin-xs{
+    margin: 1vw
+}
+.margin-tbr{
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    margin-right: 2vw;
+
+}
+.padding-l{
+    padding: 4vw;
+}
+.padding{
+    padding: 1vw;
+}
+.padding-bottom{
+    padding-bottom: 2vw;
+}
+.icon{
+    width: 160px;
+}
+.icon-ppl{
+    width: 160px;
+    margin: 5vw;
+}
+.icon-m{
+    width: 80px;
+    margin: 35px 5vw;
+}
+.icon-s{
+    width: 40px;
+    margin: 2px 2vw;
+}
+.body-h-txt {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.text-project-numbers {
+    display: flex;
+    justify-content: center;
+    margin: 80px 0;
+    color: #4C665B;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: 100;
+    font-size: 120px;
+    margin-bottom: 30px;
+}
+
+.text-project {
+    display: flex;
+    justify-content: center;
+    margin: 80px 0;
+    font-family: sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.body-bg {
+    background-color: #EAF0EE;
+    margin: 0;
+}
+
+.body-bg-height {
+    height: 350px;
+    background-color: #EAF0EE;
+    margin: 0;
+}
+
 
 /* content */
 
@@ -563,6 +824,102 @@ body {
 }
 
 /* content*/
+
+/* marquee */
+
+/* .marquee {
+    height: 100px;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    background: #fefefe;
+    color: #333;
+    border-top: 1px solid #4a4a4a;
+    border-bottom: 1px solid #4a4a4a;
+
+}
+.marquee-inner {
+    overflow: hidden;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: 200%;
+    height: 100%;
+    margin: 20px 0;
+    line-height: 50px;
+    text-align: center;
+    transform: translateX(100%);
+    animation: marquee-text 8s linear infinite ;
+}
+.marquee-text{
+font-size: 40px;  
+margin: 0 100px;
+font-weight: 100;
+
+}
+.marquee-text:hover {
+transform: scale(1.2);
+opacity: .5;
+cursor: pointer;
+}
+@keyframes marquee-text {
+    0% {
+        transform: translateX(0%);
+    }            
+  100% {
+        transform: translateX(100%);
+    }
+}
+.marquee-inner:hover {
+animation-play-state: paused;
+} */
+
+.marquee {
+    position: relative;
+    width: 100vw;
+    max-width: 100%;
+    height: 300px;
+    overflow-x: hidden;
+}
+
+.track {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    white-space: nowrap;
+    will-change: transform;
+    animation: marquee 12s linear infinite;
+    margin: 50px 0;
+}
+
+@keyframes marquee {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(50%);
+    }
+}
+
+.marquee-text {
+    font-size: 40px;
+    margin: 0 90px;
+    font-weight: 100;
+}
+
+.track:hover {
+    animation-play-state: paused;
+    cursor: pointer;
+}
+
+.marquee-logo {
+    width: 40px;
+    height: auto;
+    margin-left: 1%;
+}
+
+/* marquee */
 
 /* architecture */
 
@@ -702,29 +1059,51 @@ button {
     margin: 0;
 }
 
-.t-titlepls {
+.t-title-l{
     font-size: 26px;
     margin-bottom: 45px;
 }
-
-.t-title {
+.t-title-m{
     font-size: 20px;
     margin-bottom: 15px;
 }
-
-.t-subtitle {
+.t-title-s {
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+.t-subtitle-m {
+    font-size: 18px;
+    font-weight: 300;
+    margin: 6px/* top&bottom*/
+    0px/* left&right*/
+    ;
+}
+.t-text {
     font-size: 18px;
     font-weight: 100;
     margin: 2px/* top&bottom*/
     0px/* left&right*/
     ;
 }
+.t-text-s {
+    font-size: 14px;
+    font-weight: 100;
+    margin: 5px 1vw;
+}
+
 
 .t-time {
     font-size: 14px;
     font-weight: 100;
     font-style: italic;
     margin-bottom: 15px;
+}
+
+.t-thesis-casestudy {
+    font-size: 14px;
+    font-weight: 100;
+    font-style: italic;
+    margin-left: 33%;
 }
 
 .body-left {
@@ -739,10 +1118,21 @@ button {
     align-items: flex-start;
 }
 
+.body-center {
+    display: flex;
+    align-items: center;
+    margin: 0 38%;
+}
+
 /* about me */
 
 .body-img {
     width: 50%;
+}
+
+.body-img-v {
+    height: 800px;
+    width: auto;
 }
 
 .body-txt {
@@ -750,6 +1140,13 @@ button {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.body-pinfor {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 400px;
 }
 
 /* back to top btn */
