--- a/main.css
+++ b/main.css
@@ -137,9 +137,6 @@
         margin-bottom: -20px !important;
     }
     /* about me */
-    .t-titlepls {
-        font-size: 8px !important;
-    }
     .t-title {
         font-size: 8px !important;
     }
@@ -305,7 +302,6 @@ br {
     opacity: 0.8;
 }
 
-
 /*progress bar*/
 
 .header {
@@ -406,12 +402,15 @@ br {
 
 /*head tool bar scroll end*/
 
+.z-index-top {
+    z-index: 99;
+}
+
 /* body-intro */
 
 body {
     font-family: 'Lato', sans-serif;
 }
-
 
 .body-landing {
     display: flex;
@@ -490,13 +489,16 @@ body {
     0px/* left&right*/
     ;
 }
+
 /* body-intro */
+
 /* body-project- new css test */
 
 .column {
     display: flex;
     flex-direction: column;
 }
+
 .row {
     display: flex;
     flex-direction: row;
@@ -505,31 +507,35 @@ body {
 .align-top {
     display: flex;
     align-items: flex-start;
-
     justify-content: flex-start;
-
 }
+
 .align-bottom {
     display: flex;
     align-items: flex-end;
     justify-content: center;
 }
+
 .align-left {
     display: flex;
     justify-content: flex-start;
 }
+
 .align-right {
     display: flex;
     justify-content: flex-end;
 }
+
 .center-h {
     display: flex;
     justify-content: center;
 }
+
 .center-h-spacearound {
     display: flex;
     justify-content: space-around;
 }
+
 .center-v {
     display: flex;
     align-items: center;
@@ -550,7 +556,8 @@ body {
     font-weight: 300;
     box-shadow: 0 2px 4px 0 rgba(238, 238, 238, 0.795), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
 }
-.circle-gh{
+
+.circle-gh {
     height: 9vw;
     width: 9vw;
     border-radius: 50%;
@@ -561,48 +568,67 @@ body {
     opacity: .9;
     cursor: pointer;
     transition: transform 330ms ease-in-out;
-}
-.color-grey{
-    background-color: #F5F5F5;
-    box-shadow: 0 2px 4px 0 rgba(238, 238, 238, 0.795), 0 2px 8px 0 rgba(0, 0, 0, 0.19);
-}
-.border-radius{
-    border-radius: 10%;
-}
-.border{
     border: 1px solid #4C665B;
 }
-.height{
-    height: 15vw;
+
+.color-grey {
+    background-color: #F5F5F5;
+    box-shadow: 0 29px 38px 0 rgba(0, 0, 0, 0.2), 0 36px 68px 0 rgba(0, 0, 0, 0.19);
 }
-.width-xs{
+
+.box-shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.border-radius {
+    border-radius: 6%;
+}
+
+.border {
+    border: 1px solid #4C665B;
+}
+
+.height-s {
+    height: 10vw;
+}
+
+.height {
+    height: 16vw;
+}
+
+.width-xs {
     width: 10vw;
     margin: 2vw;
 }
-.width-s{
+
+.width-s {
     width: 12vw;
     margin: 2vw;
 }
 
-.width-m{
-    width: 15vw;
+.width-m {
+    width: 14vw;
     margin: 2vw;
 }
-.width-l{
+
+.width-l {
     width: 35vw;
     margin: 4vw;
 }
-.width{
+
+.width {
     width: 15vw;
     margin: 2vw;
 }
+
 .h-line {
     border-top: 1px solid #707070;
     height: 0px;
     width: 180px;
-    margin-top: 0px ;
+    margin-top: 0px;
     margin-bottom: 1vw;
 }
+
 .ver-line {
     border-left: 1px solid gray;
     height: 160px;
@@ -610,23 +636,23 @@ body {
 }
 
 .speech-bubble {
-	position: relative;
-	background: #f5f5f5;
-	border-radius: .4em;
+    position: relative;
+    background: #f5f5f5;
+    border-radius: .4em;
 }
 
 .speech-bubble:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 50%;
-	width: 0;
-	height: 0;
-	border: 0.563em solid transparent;
-	border-right-color: #f5f5f5;
-	border-left: 0;
-	margin-top: -0.562em;
-	margin-left: -0.562em;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 0;
+    height: 0;
+    border: 0.563em solid transparent;
+    border-right-color: #f5f5f5;
+    border-left: 0;
+    margin-top: -0.562em;
+    margin-left: -0.562em;
 }
 
 .horizontal-line {
@@ -667,10 +693,8 @@ body {
     120px;
     /* left&right*/
 }
+
 /* body-project- new css test */
-
-
-
 
 .research-arrow {
     margin: 5vw 2vw;
@@ -689,6 +713,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .body-h-icon {
     display: flex;
     flex-direction: row;
@@ -696,54 +721,68 @@ body {
     align-items: right;
     width: 30%;
 }
+
 .body-margin {
     margin: 0px 6%;
 }
-.margin-tb{
+
+.margin-tb {
     margin: 0 10vw;
 }
-.margin-l{
+
+.margin-l {
     margin: 20vw;
 }
-.margin-m{
+
+.margin-m {
     margin: 4vw;
 }
-.margin-s{
+
+.margin-s {
     margin: 2vw
 }
-.margin-xs{
+
+.margin-xs {
     margin: 1vw
 }
-.margin-tbr{
+
+.margin-tbr {
     margin-top: 2vw;
     margin-bottom: 2vw;
     margin-right: 2vw;
-
 }
-.padding-l{
+
+.padding-l {
     padding: 4vw;
 }
-.padding{
-    padding: 1vw;
+
+.padding {
+    padding: 2vw;
 }
-.padding-bottom{
+
+.padding-bottom {
     padding-bottom: 2vw;
 }
-.icon{
+
+.icon {
     width: 160px;
 }
-.icon-ppl{
+
+.icon-ppl {
     width: 160px;
     margin: 5vw;
 }
-.icon-m{
+
+.icon-m {
     width: 80px;
     margin: 35px 5vw;
 }
-.icon-s{
+
+.icon-s {
     width: 40px;
     margin: 2px 2vw;
 }
+
 .body-h-txt {
     display: flex;
     flex-direction: row;
@@ -772,17 +811,25 @@ body {
     margin-bottom: 30px;
 }
 
-.body-bg {
-    background-color: #EAF0EE;
+.bg-color-gh {
+    background-color: #ffffff;
     margin: 0;
+    height: 60vw;
 }
 
-.body-bg-height {
-    height: 350px;
-    background-color: #EAF0EE;
-    margin: 0;
+.bg-color-gh1 {
+    background-color: #ffffff;
+    margin-top: 10vw;
+    height: 14vw;
+    padding-bottom: 10vw;
 }
 
+.bg-color-gh-carouselGH {
+    background-color: #EAF0EE;
+    margin-top: 10vw;
+    height: 28vw;
+    padding-bottom: 10vw;
+}
 
 /* content */
 
@@ -820,7 +867,7 @@ body {
 
 #photos {
     width: 600px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 19px 38px 0 rgba(0, 0, 0, 0.2), 0 36px 68px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* content*/
@@ -964,6 +1011,49 @@ animation-play-state: paused;
     right: 0px;
 }
 
+.carouselGH {
+    position: relative;
+    width: 90%;
+    margin: 0 auto;
+    height: 650px;
+}
+
+.carouselContentGH {
+    position: relative;
+    overflow: hidden;
+    transition: width .4s;
+    height: 100%;
+}
+
+.slideGH {
+    height: 100%;
+    position: absolute;
+    z-index: 1;
+    transition: left .4s cubic-bezier(.47, .13, .15, .89);
+}
+
+.nav-gh {
+    top: 50%;
+    margin-top: -60px;
+    margin-left: -50px;
+    margin-right: -50px;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    z-index: 2;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.nav-left-gh {
+    left: 0px;
+}
+
+.nav-right-gh {
+    right: 0px;
+}
+
 /* architecture */
 
 /* Photography */
@@ -1059,18 +1149,21 @@ button {
     margin: 0;
 }
 
-.t-title-l{
+.t-title-l {
     font-size: 26px;
-    margin-bottom: 45px;
+    margin-bottom: 5px;
 }
-.t-title-m{
-    font-size: 20px;
+
+.t-title-m {
+    font-size: 22px;
     margin-bottom: 15px;
 }
+
 .t-title-s {
     font-size: 18px;
     margin-bottom: 15px;
 }
+
 .t-subtitle-m {
     font-size: 18px;
     font-weight: 300;
@@ -1078,19 +1171,20 @@ button {
     0px/* left&right*/
     ;
 }
+
 .t-text {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 100;
     margin: 2px/* top&bottom*/
     0px/* left&right*/
     ;
 }
+
 .t-text-s {
     font-size: 14px;
     font-weight: 100;
     margin: 5px 1vw;
 }
-
 
 .t-time {
     font-size: 14px;
